Input section done

--- a/style.css
+++ b/style.css
@@ -4,5 +4,8 @@ html,body {
     font-family: "Manrope", sans-serif;
 }
 
-
-    
+#bg-image {
+    background-image: url(assets/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
